Listing now using Collection prototype.

--- a/demo.html
+++ b/demo.html
@@ -26,8 +26,7 @@
 	
 	
 	<script id="article-template" type="text/x-handlebars-template">
-		
-			<div id="opened-article">
+			<div class="listing-article-container">
 				<div class="listing-article-title">
 					({{title}}) ({{id}})
 				</div>
@@ -35,7 +34,6 @@
 					({{{summary}}})
 				</div>
 			</div>
-			
 	</script>
 	
 	<script src="demo.js"></script>
