Tidy up of views, collections and models.

--- a/demo.html
+++ b/demo.html
@@ -28,10 +28,10 @@
 	<script id="article-template" type="text/x-handlebars-template">
 			<div class="listing-article-container">
 				<div class="listing-article-title">
-					({{title}}) ({{id}})
+					{{title}} [id:{{id}}]
 				</div>
 				<div class="listing-article-body">
-					({{{summary}}})
+					{{{summary}}}
 				</div>
 			</div>
 	</script>
